--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -21,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint:styles": "npx stylelint '**/*.css'",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx"
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -42,29 +45,28 @@
     ]
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "6.8.0",
-    "eslint-config-frontend": "^1.0.12",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.21.5",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-react-redux": "3.3.0",
-    "eslint-plugin-sonarjs": "0.5.0",
-    "stylelint": "^13.8.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-config-standard": "20.0.0",
-    "gh-pages": "^3.2.3",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
     "@sheerun/mutationobserver-shim": "0.3.3",
     "@testing-library/react": "^9.5.0",
-    "cypress": "^3.7.0",
-    "cypress-multi-reporters": "^1.4.0",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "jest-localstorage-mock": "2.4.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "6.8.0",
+    "eslint-config-trybe-frontend": "1.2.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
+    "husky": "^7.0.4",
     "mocha": "^7.2.0",
     "mochawesome": "^6.1.1",
     "mochawesome-merge": "^4.0.3",
-    "mochawesome-report-generator": "^5.1.0"
+    "mochawesome-report-generator": "^5.1.0",
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "20.0.0",
+    "stylelint-order": "^4.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "config": {
     "commitizen": {
