--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ebyrt-challenge-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.0.1"
   },
@@ -23,8 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint:styles": "npx stylelint '**/*.css'",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx",
-    "prepare": "husky install"
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx"
   },
   "eslintConfig": {
     "extends": [
@@ -45,32 +46,13 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
-    "@sheerun/mutationobserver-shim": "0.3.3",
-    "@testing-library/react": "^9.5.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "6.8.0",
-    "eslint-config-trybe-frontend": "1.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-trybe-frontend": "^1.2.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.2.3",
-    "husky": "^7.0.4",
-    "mocha": "^7.2.0",
-    "mochawesome": "^6.1.1",
-    "mochawesome-merge": "^4.0.3",
-    "mochawesome-report-generator": "^5.1.0",
-    "stylelint": "^13.8.0",
-    "stylelint-config-standard": "20.0.0",
-    "stylelint-order": "^4.1.0"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "stylelint": "^14.0.1",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-order": "^5.0.0"
   }
 }
