--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
-    "eslint-config-trybe-frontend": "^1.2.1",
-    "eslint-plugin-sonarjs": "^0.11.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,14 +23,7 @@
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
-    "lint:styles": "npx stylelint '**/*.css'",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "lint:styles": "npx stylelint '**/*.css'"
   },
   "browserslist": {
     "production": [
@@ -47,8 +38,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.9.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "^14.0.1",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0"
